Security update and bug fixes

--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -35,6 +35,9 @@
       </g>
       </svg>
     </a>
+    <span id="search_text_header_display" class="search_string_in_header"></span>
+    <div class="blur_end_header_text py-2"></div>
+    <div class="mask_blur_end_header_text py-2"></div>
   </nav>
 </header>
 {% endspaceless %}
