--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -15,6 +15,7 @@ AWSE - Search
         {% include 'awse/home/advertise/bottom_ad_block.html' %}
 
         <div class="row-posts-end" style="visibility: hidden;transition: margin-top 1s;margin-top: 1em;">
+            {% include 'awse/home/static_blocks/covid.html' %}
             {% include 'awse/home/additional/base.html' %}
         </div>
 
