prepare to update

--- a/awse/templates/awse/global/js.html
+++ b/awse/templates/awse/global/js.html
@@ -10,7 +10,7 @@
         search_template__ = "{{ search_template }}", get_banner__ = '{% url "get_banner" %}',
         search_suggestions_get__ = '{% url "search_suggestions_get" %}', get_ad__ = '{% url "get_ad" %}',
         footer_load__ = '{% url "footer_load" %}', token_re__ = "{{ token_re }}",
-        whois_api_url = "{% url 'whois_data' %}";
+        whois_api_url = "{% url 'whois_data' %}", credits_url__ = "{% url 'credits' %}";
 </script>
 <script defer src="{% static 'awse/js/core.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% endspaceless %}
