--- a/awse/templates/awse/global/footer.html
+++ b/awse/templates/awse/global/footer.html
@@ -1,17 +1,12 @@
 {% spaceless %}
-    <p style="color: #a5a5a5;font-size:13px;margin-bottom:-5%;text-align:center">
-        Sponsored by <a href="https://t.me/Jomahmadov2002" style="color:#636363">Jomahmadov Najibullo</a>
-    </p>
-    <br/>
-    <p style="color: #a5a5a5;font-size:13px;margin-bottom:-5%;text-align:center">
+    <p style="color:#a5a5a5;font-size:13px;margin-bottom:-5%;text-align:center">
         Developed by <a href="https://t.me/koval_yaroslav" style="color:#636363">Koval Yaroslav</a>
-    </p>
-    <br/>
-    <p style="color: #a5a5a5;font-size:13px;margin-bottom:-5%;text-align:center">
-        Logo by <a href="https://t.me/SashkoTsomyk" style="color:#636363">Ts'omyk Sasha</a>
     </p>
     <br/>
     <p class="build_info_footer" style="color:#525254;font-size:12px;margin-bottom:-5%;text-align:center">
         Build ID: awse-{{ build }}
+    </p>
+    <p style="color:#a5a5a5;font-size:10px;margin-top:10px;text-align:center">
+        Regardless of the situation - stay human.
     <!-- End footer block -->
 {% endspaceless %}
