--- a/awse/templates/awse/home/other/credits.html
+++ b/awse/templates/awse/home/other/credits.html
@@ -3,14 +3,14 @@
         <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left;">
                 <label class="city">
-                    If possible, avoid contact with strangers. Monitor your condition and see your doctor as needed. You can view the statistics by going to <a target="_blank" href="https://www.worldometers.info/coronavirus/">www.worldometers.info</a>.
+                    Credits text demo. Text Text Text Text Text Text Text Text Text Text Text Text Text Text
                 </label>
                 <br/>
                 {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
                 <div id="{{ badge_block }}" class="badge_block_info select_disable_text"></div>
                 <script id="{{ script_id }}">
-                    let x{{ title_badge }}="COVID-19&nbsp;";
-                    let x{{ icon_badge }}="fas fa-virus";
+                    let x{{ title_badge }}="Credits&nbsp;";
+                    let x{{ icon_badge }}="fas fa-at";
                     $("#{{ badge_block }}").html("<span style=\"margin:0.5em\">"+x{{ title_badge }}+"<i class=\""+x{{ icon_badge }}+"\"></i></span>");
                     $("#{{ script_id }}").remove()
                 </script>
