--- a/awse/templates/awse/home/search_container.html
+++ b/awse/templates/awse/home/search_container.html
@@ -7,11 +7,11 @@
                    style="transition: padding 0.5s;" placeholder="{{ search_template }}">
             <div class="autocom-box disable-track-awse"></div>
             <div class="load-more-end-butt icon">
-                <i class="spinner-border spinner_search_load_awse" style="visibility: hidden;"></i>
-                <i class="fas fa-search icon_search_load_awse_one" style="visibility: hidden;" title="Search"></i>
+                <i class="spinner-border spinner_search_load_awse" style="visibility:hidden"></i>
+                <i class="fas fa-search icon_search_load_awse_one" title="Search"></i>
             </div>
             <div class="clear_awse_search_string"
-                 style="visibility:hidden;transition: margin-right 0.6s;margin-right:2.3em;top:0.8em;position:absolute;right:0px;text-align:center;line-height:55px;font-size:20px;cursor:pointer">
+                 style="visibility:hidden;transition: padding-right 0.6s;padding-right:2.3em;top:0.8em;position:absolute;right:0px;text-align:center;line-height:55px;font-size:20px;cursor:pointer">
                 <i class="fas fa-times search-input-clear-button_" title="Clear string"></i>
             </div>
         </div>
