--- a/awse/templates/awse/global/footer.html
+++ b/awse/templates/awse/global/footer.html
@@ -7,6 +7,10 @@
         Build ID: awse-{{ build }}
     </p>
     <p style="color:#a5a5a5;font-size:10px;margin-top:10px;text-align:center">
+        <a href="{% url 'terms' %}" style="color:#636363" target="_blank">Terms of Use</a> and
+        <a href="{% url 'privacy' %}" style="color:#636363" target="_blank">Privacy Policy</a>
+    </p>
+    <p style="color:#a5a5a5;font-size:10px;margin-top:10px;text-align:center">
         Regardless of the situation - stay human.
     <!-- End footer block -->
 {% endspaceless %}
