--- a/awse/templates/awse/home/other/credits.html
+++ b/awse/templates/awse/home/other/credits.html
@@ -3,7 +3,15 @@
         <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left;">
                 <label class="city">
-                    Credits text demo. Text Text Text Text Text Text Text Text Text Text Text Text Text Text
+                    We have a simple goal, to give people the opportunity to search for something on the Internet without worrying that then all advertising agents on the Internet will know about it. We do not transmit or store absolutely any user information. You can view the source code of this site on our GitHub, it shows absolutely all the code.
+                    <br/><br/>
+                    Initially, the AWARE Search project was a regular bot in Telegram, which provided a search without this messenger. It was later decided to open a web version of this search engine. But it was not clear why, the site was improved, new features appeared. Subsequently, the bot in Telegram was closed. And the web version has become the main project. Over time, the speed of work was honed, errors were corrected, and the appearance of the resource was improved. Even later, the site was translated into English from Russian, to better reach the audience.
+                    <br/><br/>
+                    We pay all the bills for the servers ourselves and carry out the development more enthusiastically. If you want to help, you can contact - <a href="https://t.me/Jomahmadov_n" target="_blank">Jomahmadov Najibullo</a>.
+                    <br/><br/>
+                    At the time of writing, we no longer know what to add. Let's just say - "Your privacy is important to us, take care of it, and follow the development of technology."
+                    <br/><br/>
+                    Contact email: <a href="mailto:najibjomjim@gmail.com"><b>najibjomjim@gmail.com</b></a>
                 </label>
                 <br/>
                 {% with script_id=64|get_random_string badge_block=64|get_random_string title_badge=12|get_random_string icon_badge=12|get_random_string %}
