--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -21,7 +21,7 @@ AWSE - Search
                 {% include 'awse/home/additional/base.html' %}
             </div>
 
-            <div class="row-posts-end-additional row_containers_cl">
+            <div class="row-posts-end-additional row_containers_cl" style="display:none">
                 {# Space for credits #}
             </div>
 
