--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -21,10 +21,6 @@ AWSE - Search
                 {% include 'awse/home/additional/base.html' %}
             </div>
 
-            <div class="row-posts-end-additional row_containers_cl" style="display:none">
-                {# Space for credits #}
-            </div>
-
             {% include 'awse/home/search_els.html' %}
         </div>
         <div id="page_1" class="blog_page" style="display:none">
@@ -47,6 +43,11 @@ AWSE - Search
                    style="color:#828282;transition: margin-bottom 1s;font-size:14px;text-align:center">
                     Try updating the news list, there may be something new for you.
                 </p>
+            </div>
+        </div>
+        <div id="page_3" class="credits_page" style="display:none">
+            <div class="row-posts-end-additional row_containers_cl">
+                {# Space for credits #}
             </div>
         </div>
     </div>
