--- a/awse/templates/awse/load.html
+++ b/awse/templates/awse/load.html
@@ -15,6 +15,7 @@
             {% for el in vars.namaz_data %}
                 {% include "awse/load_blocks/namaz.html" %}
             {% endfor %}
+            {% include 'awse/load_blocks/other/line.html' %}
 
         {% else %}
             {% if vars.typeload == 'newsession' and vars.covid_stat_append %}
