--- a/awse/templates/awse/load_blocks/additional.html
+++ b/awse/templates/awse/load_blocks/additional.html
@@ -7,7 +7,7 @@
             <script id="{{ script_id }}">
                 let x{{ title_text }}="{{ vars.additional_block.Heading|encode_eng }}";
                 let x{{ entity_text }}="{{ vars.additional_block.Entity|encode_eng }}";
-                $("#{{ title_el }}").text(`${UpBDecode(x{{ title_text }})} (${UpBDecode(x{{ entity_text }})}})`);
+                $("#{{ title_el }}").text(`${UpBDecode(x{{ title_text }})} (${UpBDecode(x{{ entity_text }})})`);
                 $("#{{ script_id }}").remove()
             </script>
             {% endwith %}
