--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -1,6 +1,6 @@
 {% spaceless %}
 <div class="wrapper_gradient" style="height:48px"></div>
-<header class="site-header sticky-top py-1">
+<header class="site-header sticky-top py-1 select_disable_text">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2" href="/#search_page" aria-label="AWSE.US">
       <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
