--- a/awse/templates/awse/global/tabs_selectors.html
+++ b/awse/templates/awse/global/tabs_selectors.html
@@ -1,5 +1,5 @@
 {% spaceless %}
-    <div class="header-second noselect">
+    <div class="header-second select_disable_text">
         <div class="inside_header_container">
             <ul class="header-menu">
                 {% with search_container=24|get_random_string blog_container=24|get_random_string news_container=24|get_random_string credits_container=24|get_random_string %}
