--- a/awse/templates/awse/page.html
+++ b/awse/templates/awse/page.html
@@ -3,6 +3,7 @@
 {% block title %}{{ aware.title }} - AWSE Page{% endblock %}
 
 {% block body %}
+    <style>p{color:#fff}</style>
     <h1>{{ aware.title }}</h1><br/>
     {{ aware.page_html_code|safe }}
     <br/><br/>
