--- a/awse/templates/awse/page.html
+++ b/awse/templates/awse/page.html
@@ -3,9 +3,8 @@
 {% block title %}{{ aware.title }} - AWSE Page{% endblock %}
 
 {% block body %}
-    <style>p{color:#fff}</style>
     <h1>{{ aware.title }}</h1><br/>
-    {{ aware.page_html_code|safe }}
+    <p style="color:#fff">{{ aware.page_html_code|safe }}</p>
     <br/><br/>
     <p style="color:#757575">This is a user page and AWSE is not responsible for its content.</p>
 {% endblock %}
