--- a/awse/templates/awse/page.html
+++ b/awse/templates/awse/page.html
@@ -3,8 +3,7 @@
 {% block title %}{{ aware.title }} - AWSE Page{% endblock %}
 
 {% block body %}
-    <h1>{{ aware.title }}</h1><br/>
-    <p style="color:#fff">{{ aware.page_html_code|safe }}</p>
-    <br/><br/>
-    <p style="color:#757575">This is a user page and AWSE is not responsible for its content.</p>
+    <h1 style="font-size:1.6em;color:#fff">{{ aware.title }}</h1><br/>
+    <p style="color:#bebebe">{{ aware.page_html_code|safe }}</p>
+    <p style="color:#8a8a8a">This is a user page and AWSE is not responsible for its content.</p>
 {% endblock %}
