--- a/awse/templates/awse/default_template.html
+++ b/awse/templates/awse/default_template.html
@@ -8,7 +8,7 @@
         <meta name="theme-color" content="#0e0e10">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <title>{% block title %}{% endblock %}</title>
-        <style>*{margin:0;padding:0}code,html{font:15px/22px arial,sans-serif}html{background:#0e0e10;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}p{margin:11px 0 22px;overflow:hidden;color:#a5a5a5}h1,h2{color:#fff}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:0 0;margin-top:0;max-width:none;padding-right:0}}#logo{margin-left:-5px;color:#fff;font-size:5em}#logo{display:inline-block;height:54px;width:150px}a{color:#0079ff}li{color:#fff;margin-left:1.8em}</style>
+        <style>*{margin:0;padding:0}code,html{font:15px/22px arial,sans-serif}html{background:#0e0e10;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}p{margin:11px 0 22px;overflow:hidden;color:#a5a5a5}h1,h2{color:#fff}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:0 0;margin-top:0;max-width:none;padding-right:0}}#logo{margin-left:-5px;color:#fff;font-size:5em}#logo{display:inline-block;height:54px;width:150px}a{color:#0079ff}li{color:#fff;margin-left:1.8em}.select_disable_text{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}</style>
     </head>
     <body>
         {% block body %}{% endblock %}
