--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -18,24 +18,35 @@
         {% include 'awse/global/base_style.html' %}
     </head>
 
-    <body id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" style="background:#0e0e10;transition: width 1s, height 1s">
-        <div class="container">
+    {% with body_class=64|get_random_string container_class=64|get_random_string bg_class=64|get_random_string row_class=64|get_random_string footer_class=64|get_random_string %}
+    <body id="topSite" class="{{ body_class }}" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" style="background:#0e0e10;transition: width 1s, height 1s">
+        <div class="container bd_{{ body_class }}">
             {% include 'awse/global/header.html' %}
 
-            <div class="float_bg" style="display: none"></div>
+            <div class="float_bg bg_{{ bg_class }}" style="display: none"></div>
 
             <br/><br/>
 
-            <div class="row" id="row-box-1">
+            <div class="row rw_{{ row_class }}" id="row-box-1">
                     {% block content %}{% endblock %}
                     <br/>
 
-                <div class="footer-awse" style="margin:auto;padding-left:10px;padding-top:50px"></div>
+                <div class="footer-awse ft_{{ footer_class }}"
+                     style="margin:auto;padding-left:10px;padding-top:50px"
+                ></div>
             </div>
 
             <br/><br/><br/>
+            <script>
+                const html_body_class = "{{ body_class }}";
+                const html_container_class = "bd_{{ container_class }}";
+                const html_bg_class = "bg_{{ bg_class }}";
+                const html_row_class = "rw_{{ row_class }}";
+                const html_footer_class = "ft_{{ footer_class }}";
+            </script>
         </div>
     </body>
+    {% endwith %}
     {% include 'awse/global/js.html' %}
 </html>
 {% endspaceless %}
